--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -46,7 +46,7 @@
 							</div>
 							<!-- 下拉菜单 -->
 							<div class="pull_down">
-								<img src="__PUBLIC__/images/pull-down.png">
+								<img src="__PUBLIC__/images/down.png">
 							</div>
 						</div>
 
@@ -83,7 +83,7 @@
 				</div>
 					{/foreach}
 					<!-- 列表项 -e -->
-				
+				   
 				<!-- 提取弹框-s -->
 				<div class="popover">
 						<div class="popover_content">
