--- a/application/index/view/index_totalrevenue.html
+++ b/application/index/view/index_totalrevenue.html
@@ -19,7 +19,7 @@
             <!-- <span class="share-btn"><img src="../image/public/share-btn-zp.png" /></span> -->
         </div>
         <!-- 标题 -->
-        <div class="thead-zp" style="padding-top: 40px;">
+        <div class="thead-zp">
             <ul>
                 <li>币种名称</li>
                 <!-- <li>币种数量</li> -->
