--- a/public/css/home/totalRevence_zp.css
+++ b/public/css/home/totalRevence_zp.css
@@ -1,5 +1,5 @@
 .totalRevenue-wrap .thead-zp{
-    /* padding-top: 0.88rem; */
+    padding-top: 0.88rem;
     box-sizing: border-box;
 }
 .totalRevenue-wrap .thead-zp ul{
