--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -187,9 +187,10 @@
 									<h2>验证码:</h2>
 									<input class="lj_input3" type="text" name="verify"  />
 									<!-- <div>{:captcha_img()}</div> -->
-									<div><img id="captcha" src="{:url('index/captcha')}" onclick="this.src='{:url('index/captcha')}?'+Math.random();" width="150" style="float:left; cursor:pointer;" alt="captcha" /></div>
-									<!-- <button class="btn">验证码</button> -->
-								</div>
+							</div>
+							<div class="voting_verify">
+									<img id="captcha" src="{:url('index/captcha')}" onclick="this.src='{:url('index/captcha')}?'+Math.random();"  alt="captcha" /></div>
+								<!-- <button class="btn">验证码</button> -->
 							</div>
 							<!--000-->
 							
