--- a/application/index/view/index_my_message.html
+++ b/application/index/view/index_my_message.html
@@ -23,7 +23,7 @@
 				<div class="wtf_item">
 					<!--循环-->
 					<div class="wtf_item1" onclick="window.location.href = '{:url('index/news_details')}'">
-						<p>EOS充值提现已全面恢复正常</p>
+						<p class="publicEllipsis">EOS充值提现已全面恢复正常EOS充值提现已全面恢复正常EOS充值提现已全面恢复正常EOS充值提现已全面恢复正常EOS充值提现已全面恢复正常</p>
 						<p>03-03</p>
 					</div>
 					<!--删-->
