--- a/application/index/view/login_directdrive.html
+++ b/application/index/view/login_directdrive.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>我的团队</title>
+    <title>我的业绩</title>
     <script src="__PUBLIC__/js/public/rem.js"></script>
     <link rel="stylesheet" href="__PUBLIC__/css/public/swiper.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/base.css">
@@ -19,10 +19,10 @@
             <!-- <span class="share-btn"><img src="../image/public/share-btn-zp.png" /></span> -->
         </div>
         <!-- 社区业绩-s  -->
-        <div class="community">
+        <div class="community ">
             <div class="community_content">
                 社区业绩
-                <div class="community_num">$&nbsp;<strong>99999999</strong></div>
+                <div class="community_num publicEllipsis">$&nbsp;<strong>999999999999999999</strong></div>
             </div>
         </div>
         <!-- 社区业绩-e  -->
