--- a/public/css/home/present.css
+++ b/public/css/home/present.css
@@ -8,6 +8,7 @@
 *{
 	font-size:.3rem;
 }
+.tipsText{line-height: 0.3rem;}
 .renderingRrpa{padding-top: 0.88rem;box-sizing: border-box;}
 
 .uploadWrap p{font-size: 0.3rem;color: #fff;text-align: center;line-height: 0.8rem;}
@@ -100,12 +101,12 @@
 	justify-content: space-between;
 }
 .pull_down{
-	margin-top: .2rem;
-	width: .4rem;
-	height: .4rem;
+	margin-top: .36rem;
+	width: .28rem;
+	height: .2rem;
 	transition: all 0.5s;
 	transform: rotateZ(0deg);
-
+	margin-right: .1rem;	
 }
 .up{
 	transform: rotateZ(180deg);	
@@ -143,8 +144,13 @@
 	margin-left: .2rem;
 }
 .currency_box{
-	 display: flex;
-	 justify-content:center;
+	height:1rem;
+	padding-top:.4rem;
+	display: flex;
+	justify-content:center;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 }
 /* 下拉菜单-s*/
 .pull_down_content{
@@ -176,7 +182,7 @@
 
 /* 下拉菜单-e wrap*/
 .popover{
-	display: none;
+	 display: none; 
 	width: 100%;
 	height: 100%;
 	position: fixed;
@@ -285,7 +291,7 @@
 .voting .voting_content{
 	color: #f5f5f5;
 	/*position: relative;*/
-	/*height: auto;*/
+	height: 35%;
 	/*padding-bottom: 1rem;*/
 	line-height: .75rem;
 	/*margin-top: 2rem;*/
@@ -303,7 +309,7 @@
 	bottom: 0;
 	left: 0;
 	margin: auto;
-	height: calc(100vh - 500px);
+	/*height: calc(100vh - 400px);*/
 	padding-right: 0.3rem; 
 }
 .voting_box span{font-size: 0.3rem;}
@@ -324,7 +330,19 @@
 
 .lj_p_address .lj_input3{
 	position: relative;
+	width: 35% !important;
+	float: left;
+	margin-left: .2rem !important;
+	margin-top: .11rem;
 }
+.lj_p_address .lj_input4{
+	position: relative;
+	width: 34% !important;
+	float: left;
+	margin-left: .18rem !important;
+	margin-top: .11rem;
+}
+.phone_yzm{width: 28.5% !important;}
 
 .currency_wrap .lj_address2 .lj_input3{width:32% !important;margin-left:0 ;}
 .lj_p_address input{width: 62% !important;}
@@ -381,3 +399,44 @@
 	padding:.4rem .4rem 0 .4rem;
 	font-size:0.24rem;
 }
+/* 确认弹框-s V1.0 */
+/*  遮罩层 */
+.true_popUp_wrap{
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100vh;
+	padding: .88rem .2rem 0;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	background: rgba(0,0,0,.5);
+	display: none;
+}
+/* 弹框主体 */
+.true_popUp{
+	margin-top: 50%;
+	width:100%;
+	height: auto;
+	color:#f5f5f5;
+	background: #5a62af;
+	padding: .2rem .2rem;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+/* 弹框标题 */
+.popUp_titel{
+	width: 100%;
+	margin-bottom:.2rem;
+	text-align: center;	
+	color:#00ffff;
+}
+/* 内容主体 */
+.popUp_content{
+	overflow: hidden;
+}
+/* 主体标题 */
+.popUp_content 
+/* 确认弹框-e V1.0 */
