--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -83,18 +83,14 @@
                 <li class="itemColor-8">
                     <a href="javascript:void(0);">
                         <img src="__PUBLIC__/images/home/stock-icon.png" alt="">
-                        {if condition="$money == 0"}
-                        <span>当前股权: {$money}</span>
-                        {else}
-                        <span>z暂无股权</span>
-                        {/if}
+                        <span>当前股权</span>
                     </a>
                 </li>
             </ul>
         </div>
 
         <!-- 底部导航 -->
-        <div class="bottomNavWrap container" id="bottomNavWrap" data-id="{$id}"></div>
+        <div class="bottomNavWrap container" id="bottomNavWrap" data-id=""></div>
 
         <!-- 蒙层 -->
         <div class="mode">
