添加股权页面和获取数据

--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -81,7 +81,7 @@
                     </a>
                 </li>
                 <li class="itemColor-8">
-                    <a href="javascript:void(0);">
+                    <a href="{:url('Index/stock')}">
                         <img src="__PUBLIC__/images/home/stock-icon.png" alt="">
                         <span>当前股权</span>
                     </a>
