--- a/application/index/view/index_totalrevenue.html
+++ b/application/index/view/index_totalrevenue.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="__PUBLIC__/css/public/swiper.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/base.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/home/totalRevence_zp.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/totalRevence_zp.css?v=666">
 </head>
 <body>
     <div class="wrapper totalRevenue-wrap">
@@ -19,7 +19,7 @@
             <!-- <span class="share-btn"><img src="../image/public/share-btn-zp.png" /></span> -->
         </div>
         <!-- 标题 -->
-        <div class="thead-zp" style="padding-top: 40px;">
+        <div class="thead-zp">
             <ul>
                 <li>币种名称</li>
                 <!-- <li>币种数量</li> -->
