--- a/application/index/view/index_stock.html
+++ b/application/index/view/index_stock.html
@@ -20,7 +20,7 @@
         </div>
         <div class="community ">
             <div class="community_content">
-                <div class="community_num publicEllipsis">&nbsp;￥<strong>{$stock_rights}</strong></div>
+                <div class="community_num publicEllipsis">&nbsp;<strong>{$stock_rights}</strong></div>
             </div>
         </div>
         
