--- a/public/css/home/index.css
+++ b/public/css/home/index.css
@@ -171,6 +171,7 @@
     top: 50%;
     transform: translate(-50%,-50%);
     z-index:100;
+    display: none;
 }
 .dialog-notice .dialog-header{
     position: relative;
