--- a/application/index/view/index_dayrevenue.html
+++ b/application/index/view/index_dayrevenue.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="__PUBLIC__/css/public/swiper.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/base.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/home/totalRevence_zp.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/totalRevence_zp.css?v=999">
 </head>
 <body>
     <div class="wrapper totalRevenue-wrap">
@@ -19,12 +19,12 @@
             <!-- <span class="share-btn"><img src="../image/public/share-btn-zp.png" /></span> -->
         </div>
         <!-- 标题 -->
-        <div class="thead-zp" style="padding-top: 40px;">
+        <div class="thead-zp">
             <ul>
                 <li>币种名称</li>
                 <!-- <li>币种数量</li> -->
                 <li>主流币</li>
-                <li>平台币</li>
+                <li>HTD</li>
                 <li>时间</li>
             </ul>
         </div>
@@ -34,9 +34,9 @@
                 <li>
                     <div class="name">{$vo.cu_id|cu_get}</div>
                     <!-- <div class="number">{$vo.total_coin}</div> -->
-                    <div class="number">{$vo.main_coin}</div>
-                    <div class="price">{$vo.htd_coin}</div>
-                    <div class="total-price">{:date("Y-m-d",$vo.create_time)}</div>
+                    <div class="number publicEllipsis">{$vo.main_coin}</div>
+                    <div class="price publicEllipsis">{$vo.htd_coin}</div>
+                    <div class="total-price publicEllipsis">{:date("Y-m-d",$vo.create_time)}</div>
                 </li>
                 {/foreach}
             </ul>
