电话号码+86修改和my中的商城布局下部修改

--- a/application/index/view/my_my.html
+++ b/application/index/view/my_my.html
@@ -48,7 +48,7 @@
 
 							<div class="left"><img src="__PUBLIC__/images/my/phone.png" /></div>
 							<span class="username" style="user-select:none;">电话号码:</span>
-							<span class="text" style="user-select:none;">{$user.mobile}</span>
+							<span class="text" style="user-select:none;">+86{$user.mobile}</span>
 						</div>
 						<div class="usernameear">
 							<div class="left"><img src="__PUBLIC__/images/my/person.png" /></div>
