提取确认弹框

--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -364,6 +364,7 @@
 				$('.true').click(function() {
 					$('.popover').hide();
 					$('.voting').hide();
+					$('.true_popUp_wrap').show();
 				});
 				//弹框取消
 				$('.false').click(function() {
@@ -371,6 +372,10 @@
 					// $('.voting').hide();
 					window.location.reload(); 
 				});
+				//确认弹框按钮
+				$('.popUp_btn').click(function(){
+					$('.true_popUp_wrap').hide();
+				})
 				//点击背景隐藏and提取按钮清空提取金额的值
 				$('.popover,.popover_affirm').click(function() {
 					$(".popover").hide();
