验证码修复

--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -193,14 +193,19 @@
 							<div class="voting_verify">
 									<img id="captcha" src="{:url('index/captcha')}" onclick="this.src='{:url('index/captcha')}?'+Math.random();"  alt="captcha" /></div>
 								<!-- <button class="btn">验证码</button> -->
+								<div class="voting_affirm">
+									<span class="retrue">复投</span>
+									<span class="false">取消</span>
+								</div>
 							</div>
+							
 							<!--000-->
 							
 							
-							<div class="voting_affirm">
+							<!-- <div class="voting_affirm">
 								<span class="retrue">复投</span>
 								<span class="false">取消</span>
-							</div>
+							</div> -->
 						</form>
 					</div>
 				</div>
