--- a/public/css/my/my.css
+++ b/public/css/my/my.css
@@ -8,7 +8,7 @@
 .headportrait{
 	
 	border-radius: 50%;
-	width: 1rem;
+	width: 1.4rem;
 
 }
 #tit{
@@ -60,6 +60,7 @@
 	padding-top: 1rem;
 	padding-bottom: .5rem;
 	box-sizing: border-box;
+	font-size: .27rem;
 
 	
 }
@@ -67,6 +68,7 @@
 	
 	padding-top: .1rem;
 	box-sizing: border-box;
+	font-size: .29rem;
 	
 }
 .usernameear{
@@ -79,23 +81,25 @@
 
 .left{
 	display: inline-block;
-	width: .4rem;
-	height: .4rem;	
+	width: .44rem;
+	height: .44rem;	
 	margin-left: .1rem;
 	margin-right: .1rem;
 }
 .left img{
+	
 	width: 100%;
 	
 }
 .username{
 	display: inline-block;
-	width: 1.1rem;
+	width: 1.3rem;
 	height: .69rem;
 	line-height: .69rem;
 	position: absolute;
 	top: -.1rem;
 	color: #EEEEEE;
+	
 	/*border:1px solid green;*/	
 }
 .text{
@@ -153,6 +157,7 @@
 	padding-bottom: .3rem;
 	box-sizing: border-box;	
 	border-radius: 50%;
+	
 	
 }
 .tbody-zp div img{
