--- a/application/index/view/index_totalrevenue.html
+++ b/application/index/view/index_totalrevenue.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="__PUBLIC__/css/public/swiper.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/base.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/home/totalRevence_zp.css?v=999">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/totalRevence_zp.css">
 </head>
 <body>
     <div class="wrapper totalRevenue-wrap">
@@ -34,9 +34,9 @@
                 <li>
                     <div class="name">{$vo.cu_id|cu_get}</div>
                     <!-- <div class="number">{$vo.total_coin}</div> -->
-                    <div class="number publicEllipsis">{$vo.main_coin}</div>
-                    <div class="price publicEllipsis">{$vo.htd_coin}</div>
-                    <div class="total-price publicEllipsis">{:date("Y-m-d",$vo.create_time)}</div>
+                    <div class="number">{$vo.main_coin}</div>
+                    <div class="price">{$vo.htd_coin}</div>
+                    <div class="total-price">{:date("Y-m-d",$vo.create_time)}</div>
                 </li>
                 {/foreach}
             </ul>
