--- a/public/css/my/editPass.css
+++ b/public/css/my/editPass.css
@@ -27,7 +27,8 @@
 
 .lj_sz_btn{width: 92%;margin: 0 auto;margin-top: 0.5rem;}
 
-.lj_sz_btn a{text-align: center;font-size: 0.24rem;color: #000;padding: 0.1rem 1.9rem;background: #f5f5f5;border-radius: 0.09rem;display: block;margin-top: 0.3rem;}
+.lj_sz_btn a{text-align: center;font-size: 0.24rem;color: #000;padding: 0.15rem 1.9rem;background: #f5f5f5;border-radius: 0.09rem;display: block;margin-top: 0.3rem;}
 .lj_szmm_a{width: 61%;margin: 0 auto;}
 
 .lj_all{padding-top: 1.08rem;box-sizing: border-box;}
+.lj_sz_btn_a{background: #101b59;}
