--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title class="pageTopTitle" page-id="0">首页</title>
     <script src="__PUBLIC__/js/public/rem.js"></script>
-    
+
     <link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/swiper.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/public/bottomNav.css"/>
+    <link rel="stylesheet" href="__PUBLIC__/css/public/bottomNav.css" />
     <link rel="stylesheet" href="__PUBLIC__/css/public/base.css">
     <link rel="stylesheet" href="__PUBLIC__/css/home/index.css?v=999">
 </head>
+
 <body>
     <div class="wrapper">
         <!-- 轮播图 -->
         <div class="swiper-container banner-wrap-zp">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="__PUBLIC__/images/home/banner01.png"  />
+                    <img src="__PUBLIC__/images/home/banner01.png" />
                 </div>
                 <div class="swiper-slide">
-                    <img src="__PUBLIC__/images/home/banner02.png"  />
+                    <img src="__PUBLIC__/images/home/banner02.png" />
                 </div>
                 <div class="swiper-slide">
-                    <img src="__PUBLIC__/images/home/banner03.png"  />
+                    <img src="__PUBLIC__/images/home/banner03.png" />
                 </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -69,7 +71,7 @@
                     </a>
                 </li>
                 <li class="itemColor-6">
-                   <a href="{:url('Index/login/directDrive')}">
+                    <a href="{:url('Index/login/directDrive')}">
                         <img src="__PUBLIC__/images/home/Assets-icon@2x.png" alt="">
                         <span>我的业绩</span>
                     </a>
@@ -101,27 +103,28 @@
                 <span class="close"><img src="__PUBLIC__/images/home/notice-close.png" /></span>
             </div>
             <div class="dialog-content">
-                <p>EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复</p>
+                <p>EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复
+                </p>
             </div>
             <div class="dialog-btn">
                 <a href="javascript:void(0)">确定</a>
             </div>
-        </div>         
-        
-        
+        </div>
+
+
     </div>
-    
+
     <script src="__PUBLIC__/js/public/jquery-1.8.3.min.js"></script>
     <!--底部nav=>Tab功能-->
-	<script src="__PUBLIC__/js/public/bottomNavJs.js"></script>
+    <script src="__PUBLIC__/js/public/bottomNavJs.js"></script>
     <script src="__PUBLIC__/js/public/swiper.js"></script>
     <script src="__PUBLIC__/js/public/base.js?v=666"></script>
-    
+
     <script>
-        $(document).ready(function(){
+        $(document).ready(function () {
 
             var swiper = new Swiper('.banner-wrap-zp', {
-                loop:true,
+                loop: true,
                 pagination: '.swiper-pagination',
                 paginationClickable: true,
                 spaceBetween: 30,
@@ -130,20 +133,28 @@
             });
 
             //公告弹框
-            setTimeout(function(){
+            setTimeout(function () {
                 $(".mode").show();
                 $(".dialog-notice").show();
                 stop(".mode");
-            },1000)           
-        
+            }, 1000)
+
+            //阻止冒泡，点击弹框禁止页面滚动
+            $(".dialog-notice").bind("touchmove","touchstart",function(event){ 
+                event.stopPropagation();  
+                document.body.style.overflow = 'hidden';//禁止页面滚动
+            })
+
             //公告弹窗关闭
-            $(".dialog-notice .close,.dialog-btn a").click(function(){
+            $(".dialog-notice .close,.dialog-btn a").click(function () {
                 $(".mode").hide();
                 $(".dialog-notice").hide();
+                document.body.style.overflow = ''; //出现滚动条
             })
-            
+
         })
 
     </script>
 </body>
+
 </html>
