--- a/public/css/home/present.css
+++ b/public/css/home/present.css
@@ -332,19 +332,24 @@
 
 .lj_p_address .lj_input3{
 	position: relative;
-	/* width: 35% !important; */
+	 width: 32% !important; 
 	float: left;
 	margin-left: .2rem !important;
 	margin-top: .11rem;
 }
+
 .lj_p_address .lj_input4{
 	position: relative;
-	width: 34% !important;
+	width: 28% !important;
 	float: left;
-	margin-left: .18rem !important;
-	margin-top: .11rem;
+	margin-left: .19rem !important;
+	margin-top: .35rem;
+	margin-right: 0.25rem !important;
 }
+#captcha{width: 1.8rem;height: 0.7rem;margin-right: 0.5rem;}
 .phone_yzm{width: 28.5% !important;}
+/*间距*/
+.vo_mg{margin-bottom: 0.2rem;}
 
 .currency_wrap .lj_address2 .lj_input3{width:32% !important;margin-left:0 ;}
 .lj_p_address input{width: 62% !important;}
@@ -353,7 +358,7 @@
 	background: transparent;
 }
 
-
+.h2_input4{margin-top: 0.2rem;margin-left: 0.09rem;}
 
 /* 复投弹框-e */
 #popover_num::-webkit-input-placeholder { /* WebKit, Blink, Edge */
@@ -383,13 +388,14 @@
 .btn{
 	 border:0;
 	 border-radius:.1rem;	
-	 width: 2.1rem;
+	 width: 1.6rem;
 	 height: 0.53rem;
 	 position: absolute;
 	 top:0rem;
 	 right: 0.45rem;
 	 font-size: 0.2rem;
-	 background: #fff;
+	 background: #224ddd;
+	 color: #fff;
 }
 .payment_cont_wz{
 	float: right;
@@ -401,6 +407,8 @@
 .payment_cont_wz>p{
 	padding:.4rem .4rem 0 .4rem;
 	font-size:0.24rem;
+	letter-spacing: 0.02rem;
+	line-height: 0.38rem;
 }
 /* 确认弹框-s V1.0 */
 /*  遮罩层 */
