--- a/application/index/view/my_my.html
+++ b/application/index/view/my_my.html
@@ -33,69 +33,38 @@
 				<br/>
 				<p class="nickname">{$user.username}</span>
 			</div>
-
+				
 			<!--个人信息-->
-			<ul id="con">
+			<ul id="con" class="liestWrap clearfloat">
 
-				<li class="show" style="display: block;">
-					<div class="mingpian">
-						<div class="usernameear">
-							<div class="left"><img src="__PUBLIC__/images/my/email.png" /></div>
-							<span class="username" style="user-select:none;">电子邮箱:</span>
-							<span class="text" style="user-select:none;">{$user.usermail}</span>
-						</div>
-						<div class="usernameear">
-
-							<div class="left"><img src="__PUBLIC__/images/my/phone.png" /></div>
-							<span class="username" style="user-select:none;">电话号码:</span>
-							<span class="text" style="user-select:none;">+86{$user.mobile}</span>
-						</div>
-						<div class="usernameear">
-							<div class="left"><img src="__PUBLIC__/images/my/person.png" /></div>
-							<span class="username" style="user-select:none;">推广码:</span>
-							<!--<span class="text">{$user.mobile}</span>-->
-							<span class="text3 text">{$user.promotion}</span>
-
-						</div>
-
-					</div>
+				<li class=" liestTerm" >
+					
+					<p class=" liestTerm_left">
+						<img src="__PUBLIC__/images/my/email.png" />
+					</p>
+					<p class=" liestTerm_middle" style="user-select:none;">电子邮箱:</p>
+					<p class=" liestTerm_right" style="user-select:none;">{$user.usermail}</p>
+				</li>
+				<li class=" liestTerm" style="display: block;">
+					
+					<p class=" liestTerm_left">
+						<img src="__PUBLIC__/images/my/phone.png" />
+					</p>
+					<p class=" liestTerm_middle" style="user-select:none;">电话号码:</p>
+					<p class=" liestTerm_right" style="user-select:none;">+86{$user.mobile}</p>
+				</li>
+				<li class=" liestTerm" style="display: block;">
+					
+					<p class=" liestTerm_left">
+						<img src="__PUBLIC__/images/my/person.png" />
+					</p>
+					<p class=" liestTerm_middle" style="user-select:none;">推广码:</p>
+					<p class=" liestTerm_right" style="user-select:none;">{$user.promotion}</p>
 				</li>
 
 			</ul>
 
 			<!--列表项-->
-			<!--<div class="tbody-zp">
-				<ul>
-					<li onclick="shopAlert('正在开发中，敬请期待')">
-						<a class="name">
-							<span>商城</span>
-							<img src="__PUBLIC__/images/my/jiantou.png" />
-						</a>
-					</li>
-					<li  onclick="shopAlert('正在开发中，敬请期待')">
-						<a class="name">
-							<span>交易所</span>
-							<img src="__PUBLIC__/images/my/jiantou.png" />
-						</a>
-						
-					</li>
-					<li  onclick="shopAlert('正在开发中，敬请期待')">
-						<a class="name">
-							<span>基金</span>
-							<img src="__PUBLIC__/images/my/jiantou.png" />
-						</a>
-					</li>
-					<li  onclick="shopAlert('正在开发中，敬请期待')">
-						<a class="name ">
-							<span>云服务</span>
-							<img src="__PUBLIC__/images/my/jiantou.png" />
-						</a>
-					</li>
-					
-				</ul>
-
-			</div>-->
-			
 			<div class="tbody-zp">
 				
 					<div onclick="shopAlert('正在开发中，敬请期待')" class="item" >
@@ -121,31 +90,13 @@
 					<div  onclick="shopAlert('正在开发中，敬请期待')" class="item">
 						
 						    <img src="../../../public/images/my/yunfuwu.png" />
-							<span>云服务</span>
-							
-						
+							<span>云服务</span>													
 					</div>
-					
-				
-
 			</div>
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
 		</div>
+		
+		
+		
 		<!-- 底部导航 -->
 		<div class="bottomNavWrap container" id="bottomNavWrap" data-id="{$id}"></div>
 
