--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -4,15 +4,15 @@
 	padding: 0;
 }
 /*字体库*/
-@font-face{
+/*@font-face{
 	font-family: 'PingFangMedium';
 	src: "/public/font/PingFangMedium.ttf"
-}
+}*/
 body {
 	width: 100%;
     min-height: 100vh;
 	font-size: 0.24rem;
-	font-family:"PingFangMedium";
+	/*font-family:"PingFangMedium";*/
 	background: -moz-linear-gradient(top, #142785 0%, #101b59 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #142785), color-stop(100%, #101b59));
 	background: -webkit-linear-gradient(top, #142785 0%, #101b59 100%);
