--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -408,6 +408,7 @@
 				//确认弹框按钮
 				$('.popUp_btn').click(function(){
 					$('.true_popUp_wrap').hide();
+					window.location.reload(); 
 				})
 				//点击背景隐藏and提取按钮清空提取金额的值
 				$('.popover,.popover_affirm').click(function() {
