--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -113,7 +113,7 @@
 										<input type="hidden" name="qrcode_addr" id="qrcode_addr" value="">
 										<input type="hidden" name="sms_type" id="sms_type" value="">
 										<input type="hidden" name="verify" id="verify" value="">						
-									<span>提取数量:</span> <input id="popover_num" name="number" type="number" placeholder="大于等于{$withdraw_min}美金可提取" /><br />
+									<span>提取数量:</span> <input id="popover_num" name="number" type="number" placeholder="除本金以外大于等于{$withdraw_min}美金可提取" /><br />
 									<input id="popover_convert" name="popover_convert" type="hidden" readonly  />
 								</div>
 								<!--000-->
@@ -258,30 +258,30 @@
 		<script src="__PUBLIC__/plugins/layui/layui.js"></script>
 
 		<script>
-			// function phonecode(phoneS){
-			// 	        // var phone= {$phone}
-			// 			// 获取验证码
-			// 			// console.log(phoneS)
-			// 			// return false;
-			// 			var a = '13612560591';
-			// 			$.ajax({
-			// 				url: '/index/index/getPhoneVerify',
-			// 				type: 'post',
-			// 				dataType: 'json',
-			// 				data: {phone:phoneS, sms_type:2},
-			// 				success:function(msg){
-			// 				// console.log(msg);
-            //                 // $('#sms_type').val(1);
-			// 				// $('#verify').val(msg.code);
-			// 				if(msg.code!=0){
-			// 				layer.msg('已发送');
-			// 				}else{
-			// 				layer.msg(msg.msg);
-			// 				return false;
-			// 				}
-			// 			}
-			// 			});
-			// }
+			function phonecode(phoneS){
+				        // var phone= {$phone}
+						// 获取验证码
+						// console.log(phoneS)
+						// return false;
+						var a = '13612560591';
+						$.ajax({
+							url: '/index/index/getPhoneVerify',
+							type: 'post',
+							dataType: 'json',
+							data: {phone:phoneS, sms_type:2},
+							success:function(msg){
+							// console.log(msg);
+                            // $('#sms_type').val(1);
+							// $('#verify').val(msg.code);
+							if(msg.code!=0){
+							layer.msg('已发送');
+							}else{
+							layer.msg(msg.msg);
+							return false;
+							}
+						}
+						});
+			}
 
 
 			//复投按钮
@@ -352,7 +352,7 @@
 			function daojishi(seconds,obj){
 				if (seconds > 1){
 						seconds--;
-						$(obj).html(seconds+"秒重新获取 ").attr("disabled", true);
+						$(obj).html(seconds+"重新获取 ").attr("disabled", true);
 						setTimeout(function(){
 							daojishi(seconds,obj);
 						},1000);
